--- a/Makefile.in
+++ b/Makefile.in
@@ -118,7 +118,10 @@ am__dirstamp = $(am__leading_dot)dirstamp
 am_liblife_a_OBJECTS = backend/events/urgent_life_event.$(OBJEXT) \
 	backend/events/year_logger.$(OBJEXT) \
 	backend/interface/interface.$(OBJEXT) \
-	backend/life/life.$(OBJEXT) \
+	backend/interface/education.$(OBJEXT) \
+	backend/interface/events.$(OBJEXT) \
+	backend/interface/jobs.$(OBJEXT) \
+	backend/interface/life.$(OBJEXT) backend/life/life.$(OBJEXT) \
 	backend/names/name_generator.$(OBJEXT) \
 	backend/nations/nation_generator.$(OBJEXT) \
 	backend/school/life_education.$(OBJEXT) \
@@ -148,7 +151,11 @@ depcomp = $(SHELL) $(top_srcdir)/tools/depcomp
 am__maybe_remake_depfiles = depfiles
 am__depfiles_remade = backend/events/$(DEPDIR)/urgent_life_event.Po \
 	backend/events/$(DEPDIR)/year_logger.Po \
+	backend/interface/$(DEPDIR)/education.Po \
+	backend/interface/$(DEPDIR)/events.Po \
 	backend/interface/$(DEPDIR)/interface.Po \
+	backend/interface/$(DEPDIR)/jobs.Po \
+	backend/interface/$(DEPDIR)/life.Po \
 	backend/jobs/$(DEPDIR)/company.Po \
 	backend/jobs/$(DEPDIR)/employer.Po \
 	backend/jobs/$(DEPDIR)/job.Po backend/life/$(DEPDIR)/life.Po \
@@ -393,6 +400,10 @@ liblife_a_SOURCES = \
     $(srcdir)/backend/events/urgent_life_event.cpp \
     $(srcdir)/backend/events/year_logger.cpp \
     $(srcdir)/backend/interface/interface.cpp \
+    $(srcdir)/backend/interface/education.cpp \
+    $(srcdir)/backend/interface/events.cpp \
+    $(srcdir)/backend/interface/jobs.cpp \
+    $(srcdir)/backend/interface/life.cpp \
     $(srcdir)/backend/life/life.cpp \
     $(srcdir)/backend/names/name_generator.cpp \
     $(srcdir)/backend/nations/nation_generator.cpp \
@@ -512,6 +523,15 @@ backend/interface/$(DEPDIR)/$(am__dirstamp):
 backend/interface/interface.$(OBJEXT):  \
 	backend/interface/$(am__dirstamp) \
 	backend/interface/$(DEPDIR)/$(am__dirstamp)
+backend/interface/education.$(OBJEXT):  \
+	backend/interface/$(am__dirstamp) \
+	backend/interface/$(DEPDIR)/$(am__dirstamp)
+backend/interface/events.$(OBJEXT): backend/interface/$(am__dirstamp) \
+	backend/interface/$(DEPDIR)/$(am__dirstamp)
+backend/interface/jobs.$(OBJEXT): backend/interface/$(am__dirstamp) \
+	backend/interface/$(DEPDIR)/$(am__dirstamp)
+backend/interface/life.$(OBJEXT): backend/interface/$(am__dirstamp) \
+	backend/interface/$(DEPDIR)/$(am__dirstamp)
 backend/life/$(am__dirstamp):
 	@$(MKDIR_P) backend/life
 	@: > backend/life/$(am__dirstamp)
@@ -614,7 +634,11 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@backend/events/$(DEPDIR)/urgent_life_event.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/events/$(DEPDIR)/year_logger.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@backend/interface/$(DEPDIR)/education.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@backend/interface/$(DEPDIR)/events.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/interface/$(DEPDIR)/interface.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@backend/interface/$(DEPDIR)/jobs.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@backend/interface/$(DEPDIR)/life.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/jobs/$(DEPDIR)/company.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/jobs/$(DEPDIR)/employer.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/jobs/$(DEPDIR)/job.Po@am__quote@ # am--include-marker
@@ -979,7 +1003,11 @@ distclean: distclean-am
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
 		-rm -f backend/events/$(DEPDIR)/urgent_life_event.Po
 	-rm -f backend/events/$(DEPDIR)/year_logger.Po
+	-rm -f backend/interface/$(DEPDIR)/education.Po
+	-rm -f backend/interface/$(DEPDIR)/events.Po
 	-rm -f backend/interface/$(DEPDIR)/interface.Po
+	-rm -f backend/interface/$(DEPDIR)/jobs.Po
+	-rm -f backend/interface/$(DEPDIR)/life.Po
 	-rm -f backend/jobs/$(DEPDIR)/company.Po
 	-rm -f backend/jobs/$(DEPDIR)/employer.Po
 	-rm -f backend/jobs/$(DEPDIR)/job.Po
@@ -1039,7 +1067,11 @@ maintainer-clean: maintainer-clean-am
 	-rm -rf $(top_srcdir)/autom4te.cache
 		-rm -f backend/events/$(DEPDIR)/urgent_life_event.Po
 	-rm -f backend/events/$(DEPDIR)/year_logger.Po
+	-rm -f backend/interface/$(DEPDIR)/education.Po
+	-rm -f backend/interface/$(DEPDIR)/events.Po
 	-rm -f backend/interface/$(DEPDIR)/interface.Po
+	-rm -f backend/interface/$(DEPDIR)/jobs.Po
+	-rm -f backend/interface/$(DEPDIR)/life.Po
 	-rm -f backend/jobs/$(DEPDIR)/company.Po
 	-rm -f backend/jobs/$(DEPDIR)/employer.Po
 	-rm -f backend/jobs/$(DEPDIR)/job.Po
